Folder name changed

--- a/Components/index.html
+++ b/Components/index.html
@@ -43,7 +43,7 @@
                 <img src="../Images/special_thali2.png" alt="">
             </div>
         </section>
-        
+        <div class="service"></div>
 
         
     </main>
