--- a/Components/index.html
+++ b/Components/index.html
@@ -43,7 +43,19 @@
                 <img src="../Images/special_thali2.png" alt="">
             </div>
         </section>
-        <div class="service"></div>
+        <div class="special-menu">
+            <h1>Our specialties</h1>
+            <div class="menu">
+                <div class="product">
+                    <img src="../Images/fish.jpg" alt="fish">
+                    <h2 class="product-name">Chicken curry</h2>
+                    <h3>Price <span>Rs.290</span></h3>
+                    <button>Add to cart</button>
+                    <button><a href="#">Buy now</a></button>
+                </div>
+            </div>
+
+        </div>
  
         
     </main>
