--- a/Css/index.css
+++ b/Css/index.css
@@ -136,7 +136,7 @@ nav {
     height: 500px;
     width: 500px;
     padding-top: 100px;
-    animation: rotate 5s infinite linear;
+    animation: rotate 2s infinite linear;
 }
 
 @keyframes rotate {
@@ -182,6 +182,49 @@ nav {
     height: 100%;
     background-size: cover;
     width: 100%;
+}
+.special-menu{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    margin-top: 100px;
+    align-items: center;
+    height: auto;
+    width: 100%;
+}
+.special-menu h1{
+    font-size: 50px;
+    text-align: center;
+    padding-bottom: 15px;
+    margin-top: 25px;
+    border: none;
+    color: white;
+    border-bottom: 7px solid blue;
+    border-radius: 50px;
+    width: 360px;
+    margin-bottom: 10px;
+}
+.menu{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    height: auto;
+    margin-top: 30px;
+}
+.menu .product{
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    width: 300px;
+}
+.menu .product img{
+    height: 60%;
+    width: 100%;
+}
+menu .product h2{
+    font-size: 55px;
+    color: rgb(49, 236, 28);
 }
 
 
