--- a/Components/index.html
+++ b/Components/index.html
@@ -9,7 +9,8 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="../Images/logo1.png" alt="Pangat_Hotel" >
+            <!-- <img src="../Images/logo1.png" alt="Pangat_Hotel" > -->
+             <h1>Hotel_Pangat</h1>
         </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
@@ -43,20 +44,93 @@
                 <img src="../Images/special_thali2.png" alt="">
             </div>
         </section>
-        <div class="special-menu">
+        <!-- <div class="special-menu">
             <h1>Our specialties</h1>
             <div class="menu">
                 <div class="product">
                     <img src="../Images/fish.jpg" alt="fish">
+                    <div class="desc">
+                    <h2 class="product-name">Chicken curry</h2>
+                    <h3>Price <span>Rs.290</span></h3>
+                    <button onclick="console.log('hello')">Add to cart</button>
+                    <button><a href="#">Buy now</a></button>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="../Images/special_thali2.png" alt="fish">
+                    <div class="desc">
                     <h2 class="product-name">Chicken curry</h2>
                     <h3>Price <span>Rs.290</span></h3>
                     <button>Add to cart</button>
                     <button><a href="#">Buy now</a></button>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="../Images/special thali.jpg" alt="fish">
+                    <div class="desc">
+                    <h2 class="product-name">Chicken curry</h2>
+                    <h3>Price <span>Rs.290</span></h3>
+                    <button >Add to cart</button>
+                    <button><a href="#">Buy now</a></button>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="../Images/" alt="fish">
+                    <div class="desc">
+                    <h2 class="product-name">Chicken curry</h2>
+                    <h3>Price <span>Rs.290</span></h3>
+                    <button >Add to cart</button>
+                    <button><a href="#">Buy now</a></button>
+                    </div>
                 </div>
             </div>
 
-        </div>
- 
+        </div> -->
+        <section class="specialties">
+            <h2>
+             Our Specialties
+            </h2>
+            <div class="underline">
+            </div>
+            <p>
+             Signature dishes crafted with passion
+            </p>
+            <div class="cards">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <p>Atlantic salmon with lemon butter </p>
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <p>Atlantic salmon with lemon butter </p>
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <p>Atlantic salmon with lemon butter </p>
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <p>Atlantic salmon with lemon butter </p>
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+            </div>
+            <a class="view-menu" href="#"> View Full Menu </a>
+           </section>
         
     </main>
 
