Service and special menu added

--- a/Components/index.html
+++ b/Components/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar</title>
     <link rel="stylesheet" href="../Css/index.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
 </head>
 <body>
     <nav>
@@ -44,58 +46,22 @@
                 <img src="../Images/special_thali2.png" alt="">
             </div>
         </section>
-        <!-- <div class="special-menu">
-            <h1>Our specialties</h1>
-            <div class="menu">
-                <div class="product">
-                    <img src="../Images/fish.jpg" alt="fish">
-                    <div class="desc">
-                    <h2 class="product-name">Chicken curry</h2>
-                    <h3>Price <span>Rs.290</span></h3>
-                    <button onclick="console.log('hello')">Add to cart</button>
-                    <button><a href="#">Buy now</a></button>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../Images/special_thali2.png" alt="fish">
-                    <div class="desc">
-                    <h2 class="product-name">Chicken curry</h2>
-                    <h3>Price <span>Rs.290</span></h3>
-                    <button>Add to cart</button>
-                    <button><a href="#">Buy now</a></button>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../Images/special thali.jpg" alt="fish">
-                    <div class="desc">
-                    <h2 class="product-name">Chicken curry</h2>
-                    <h3>Price <span>Rs.290</span></h3>
-                    <button >Add to cart</button>
-                    <button><a href="#">Buy now</a></button>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="../Images/" alt="fish">
-                    <div class="desc">
-                    <h2 class="product-name">Chicken curry</h2>
-                    <h3>Price <span>Rs.290</span></h3>
-                    <button >Add to cart</button>
-                    <button><a href="#">Buy now</a></button>
-                    </div>
-                </div>
-            </div>
 
-        </div> -->
         <section class="specialties">
             <h2>
-             Our Specialties
+             Our Special Menu
             </h2>
             <div class="underline">
             </div>
             <p>
              Signature dishes crafted with passion
             </p>
+
             <div class="cards">
+            
+            <div class="container">
+                
+            <div class="item">
              <div class="card">
               <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
               <div class="content">
@@ -104,24 +70,10 @@
                <div class="price">$32.99</div>
               </div>
              </div>
-             <div class="card">
-              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
-              <div class="content">
-               <h3>Grilled Salmon</h3>
-               <p>Atlantic salmon with lemon butter </p>
-               <div class="price">$32.99</div>
-              </div>
              </div>
+             <div class="item">
              <div class="card">
-              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
-              <div class="content">
-               <h3>Grilled Salmon</h3>
-               <p>Atlantic salmon with lemon butter </p>
-               <div class="price">$32.99</div>
-              </div>
-             </div>
-             <div class="card">
-              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
               <div class="content">
                <h3>Grilled Salmon</h3>
                <p>Atlantic salmon with lemon butter </p>
@@ -129,8 +81,80 @@
               </div>
              </div>
             </div>
-            <a class="view-menu" href="#"> View Full Menu </a>
+            <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <p>Atlantic salmon with lemon butter </p>
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+             </div>
+             <div class="item">
+                <div class="card">
+                 <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/special thali.jpg" width="300"/>
+                 <div class="content">
+                  <h3>Grilled Salmon</h3>
+                  <p>Atlantic salmon with lemon butter </p>
+                  <div class="price">$32.99</div>
+                 </div>
+                </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                     <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
+                     <div class="content">
+                      <h3>Grilled Salmon</h3>
+                      <p>Atlantic salmon with lemon butter </p>
+                      <div class="price">$32.99</div>
+                     </div>
+                    </div>
+                    </div>
+            </div>
+            <center><a class="view-menu" href="#"> View Full Menu </a></center>
+        </section>
+
+        <section class="features">
+            <h2>
+                Our Services</h2>
+               <div class="underline">
+               </div>
+            <div class="service-list">
+            <div class="feature">
+             <i class="fas fa-utensils">
+             </i>
+             <h3>
+              Easy To Order
+             </h3>
+             <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             </p>
+            </div>
+            <div class="feature">
+             <i class="fas fa-truck">
+             </i>
+             <h3>
+              Fastest Delivery
+             </h3>
+             <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             </p>
+            </div>
+            <div class="feature">
+             <i class="fas fa-star">
+             </i>
+             <h3>
+              Best Quality
+             </h3>
+             <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             </p>
+            </div>
+            </div>
            </section>
+
+
         
     </main>
 
