--- a/Components/index.html
+++ b/Components/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../Css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+        </style>
 </head>
 <body>
     <nav>
@@ -19,11 +22,11 @@
             <li><a href="#">Menu</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact us</a></li>
-            <button id="book">Book Table</button>
+            <li><a href="#">Book Table</a></li>
         </ul>
         <div class="nav-list">
             <ul class="item-list">
-                <li><a href="#"><img src="../icon/loginwhite.png" alt="">Login</a></li>
+                <li><a href="#"><img src="../icon/login.png" alt="">Login</a></li>
                 <li><a href="#"><img src="../icon/cart.png" alt="">Cart</a></li>
                 <div class="burger">
                     <img src="../icon/menu.png" alt="bar" class="open">
@@ -47,77 +50,8 @@
             </div>
         </section>
 
-        <section class="specialties">
-            <h2>
-             Our Special Menu
-            </h2>
-            <div class="underline">
-            </div>
-            <p>
-             Signature dishes crafted with passion
-            </p>
-
-            <div class="cards">
-            
-            <div class="container">
-                
-            <div class="item">
-             <div class="card">
-              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
-              <div class="content">
-               <h3>Grilled Salmon</h3>
-               <p>Atlantic salmon with lemon butter </p>
-               <div class="price">$32.99</div>
-              </div>
-             </div>
-             </div>
-             <div class="item">
-             <div class="card">
-              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
-              <div class="content">
-               <h3>Grilled Salmon</h3>
-               <p>Atlantic salmon with lemon butter </p>
-               <div class="price">$32.99</div>
-              </div>
-             </div>
-            </div>
-            <div class="item">
-             <div class="card">
-              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
-              <div class="content">
-               <h3>Grilled Salmon</h3>
-               <p>Atlantic salmon with lemon butter </p>
-               <div class="price">$32.99</div>
-              </div>
-             </div>
-             </div>
-             <div class="item">
-                <div class="card">
-                 <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/special thali.jpg" width="300"/>
-                 <div class="content">
-                  <h3>Grilled Salmon</h3>
-                  <p>Atlantic salmon with lemon butter </p>
-                  <div class="price">$32.99</div>
-                 </div>
-                </div>
-                </div>
-                <div class="item">
-                    <div class="card">
-                     <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
-                     <div class="content">
-                      <h3>Grilled Salmon</h3>
-                      <p>Atlantic salmon with lemon butter </p>
-                      <div class="price">$32.99</div>
-                     </div>
-                    </div>
-                    </div>
-            </div>
-            <center><a class="view-menu" href="#"> View Full Menu </a></center>
-        </section>
-
         <section class="features">
-            <h2>
-                Our Services</h2>
+            <h2>Our Services</h2>
                <div class="underline">
                </div>
             <div class="service-list">
@@ -152,12 +86,91 @@
              </p>
             </div>
             </div>
-           </section>
+        </section>
+
+        <section class="specialties">
+            <h2>
+             Our Special Menu
+            </h2>
+            <div class="underline">
+            </div>
+            <p>
+             Signature dishes crafted with passion
+            </p>
+
+            <div class="cards">
+            <div class="container">
+                
+            <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <!-- <p>Atlantic salmon with lemon butter </p> -->
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+             </div>
+             <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <!-- <p>Atlantic salmon with lemon butter </p> -->
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+            </div>
+            <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <!-- <p>Atlantic salmon with lemon butter </p> -->
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+            </div>
+            <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <!-- <p>Atlantic salmon with lemon butter </p> -->
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+            </div>
+            <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <!-- <p>Atlantic salmon with lemon butter </p> -->
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+            </div>
+            <div class="item">
+             <div class="card">
+              <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/fish1.jpg" width="300"/>
+              <div class="content">
+               <h3>Grilled Salmon</h3>
+               <!-- <p>Atlantic salmon with lemon butter </p> -->
+               <div class="price">$32.99</div>
+              </div>
+             </div>
+             </div>
+            </div>
+            <center><a class="view-menu" href="#"> View Full Menu </a></center>
+        </section>
+
 
 
         
     </main>
 
     <script src="../Javascript/index.js"></script>
+
 </body>
 </html>
