--- a/Css/index.css
+++ b/Css/index.css
@@ -1,11 +1,13 @@
 html,body{
     margin: 0px;
     padding: 0px;
+    font-family: "Poppins", serif;
 }
 nav {
-    background-color: rgb(242, 184, 98);
-    color: #fff;
+    background-color: transparent;
+    backdrop-filter: blur(25px);
     display: flex;
+    position: sticky;
     height: 80px;
     position: sticky;
     justify-content: space-between;
@@ -14,6 +16,13 @@ nav {
     margin: 0px;
 }
 
+  .poppins-regular {
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  
 /* .logo img{
     color: white;
     padding-left: 30px;
@@ -38,25 +47,15 @@ nav {
 
 .nav-links a {
     text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-}
-.nav-links a:hover{
     color: black;
-}
-#book{
-    padding: 5px 10px;
-    background-color: yellow;
-    border-radius: 10px;
-    cursor: pointer;
-    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-family: "Poppins", serif;
     font-size: 20px;
 }
-#book:hover{
-    background-color: red;
-    color: white;
+.nav-links a:hover{
+    color: red;
 }
+
 .item-list{
     display: flex;
     justify-content: space-around;
@@ -78,6 +77,7 @@ nav {
 .item-list li a img{
     height:40px;
     height: 40px;
+    color: black;
 }
 .burger {
     display: none;
@@ -96,13 +96,13 @@ nav {
     display: none;
 }
 #home-page{
-    background-image: url("../Images/p1.jpg");
+    background:rgba(0,0,0,0.7) url("../Images/bg.jpg");
     background-size: cover;
     margin: 35px;
     display: flex;
     height: auto;
+    background-blend-mode: darken;
     justify-content: center;
-    background-color: black;
     align-items: center;
     border-radius: 15px;
 }
@@ -129,20 +129,19 @@ nav {
 }
 #home-btn{
     padding: 8px 26px;
-    background-color: rgb(255, 187, 0);
+    background-color: red;
     color: white;
     font-size: 22px;
     border-radius: 50px;
     border: 2px solid white;
     cursor: pointer;
-    font-family: 'Times New Roman', Times, serif;
     align-items: center;
 }
 
 #home-btn:hover{
-    background-color: transparent;
-    color: #fff;
-    border: 2px solid #fff;
+    background-color: white;
+    color: red;
+    border: 2px solid black;
 }
 .home-img img{
     height: 500px;
@@ -167,8 +166,8 @@ nav {
 .specialties{
     text-align: center;
     padding: 50px 20px;
-    background-color: #1a1a1a;
-    color: white;
+    background-color: white;
+    color: #1a1a1a;
 }
 
 .specialties h2{
@@ -177,7 +176,7 @@ nav {
 }
 .specialties p{
     font-size: 1.2em;
-    color: #b3b3b3;
+    color: #353434;
 }
 .specialties .underline{
     width: 50px;
@@ -198,7 +197,7 @@ nav {
     width: 350px;
     text-align: left;
     color: white;
-    height: 450px;
+    height: 350px;
 }
 .container {
     width: 100%;
@@ -220,6 +219,7 @@ nav {
 }
 .specialties .card .content{
     padding: 20px;
+    padding-top: 10px;
 }
 .specialties .card .content h3{
     margin: 0;
@@ -249,7 +249,8 @@ nav {
     text-align: center;
     justify-content: space-around;
     padding: 50px;
-    background-color: #fff;
+    padding-bottom: 100px;
+    background-color: #1a1a1a;
 }
 .features .service-list{
     display: flex;
@@ -262,26 +263,27 @@ nav {
     border: 2px solid black;
     padding: 20px;
     border-radius: 10px;
-    border: 5px solid gray;
+    border: 5px solid red;
 }
 .features .service-list .feature i {
     font-size: 40px;
-    color: black;
+    color: white;
     margin-bottom: 10px;
 }
 .features .service-list .feature h3 {
     font-size: 24px;
-    color: #333;
+    color: white;
     margin-bottom: 10px;
 }
 .features .service-list .feature p {
     font-size: 16px;
-    color: #666;
+    color: #f0e9e9;
 }
 .features h2{
     font-size: 2.5em;
     margin: 20px;
     text-align: center;
+    color: white;
 }
 .features .underline{
     width: 50px;
@@ -304,10 +306,21 @@ nav {
 
 
 /* Media Query for smaller screens */
-@media (max-width: 768px) {
+@media (max-width: 920px) {
+    html,body{
+        margin: 0px;
+        padding: 0px;
+        font-family: "Poppins", serif;
+    }
+      .poppins-regular {
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
     .nav-links {
         position: absolute;
-        background-color: rgb(12, 4, 95);
+        background-color: white;
+        backdrop-filter: blur(50px);
         width: auto;
         height: 0;
         overflow: hidden;
@@ -316,12 +329,12 @@ nav {
     }
 
     .nav-links.active {
-        height: 60px;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
         width: 100%;
+        font-family: "Poppins", serif;
         top: 70px;
         padding: 0px;
         margin: 0px;
@@ -335,6 +348,10 @@ nav {
     .nav-links li {
         text-align: center;
         padding: 15px;
+    }
+    .nav-links li a{
+        font-family: "Poppins", serif;
+        text-decoration: none;
     }
 
     .burger {
@@ -357,6 +374,7 @@ nav {
     }
     .text-title h1{
         font-size: 40px;
+        font-family: "Poppins", serif;
         margin-right: 17px;
     }
     .text-title p{
@@ -415,6 +433,7 @@ nav {
         display: flex;
         flex-direction: column;
     }
+
     .specialties{
         margin-top: 50px;
         padding-top: 20px;
@@ -454,6 +473,10 @@ nav {
         flex-direction: column;
         gap: 10px;
         padding: 25px;
+    }
+    .features .service-list{
+        display: flex;
+        flex-direction: column;
     }
 
 }
