--- a/Css/index.css
+++ b/Css/index.css
@@ -85,8 +85,8 @@ nav {
 }
 
 .burger img{
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     margin: 5px;
     color: white;
 }
@@ -190,15 +190,7 @@ nav {
     justify-content: center;
     gap: 20px;
 }
-.specialties .card {
-    background-color: #333;
-    border-radius: 10px;
-    overflow: hidden;
-    width: 350px;
-    text-align: left;
-    color: white;
-    height: 350px;
-}
+
 .container {
     width: 100%;
     display: flex;
@@ -213,19 +205,28 @@ nav {
     display: flex;
     width: 300px; /* Adjust min-width as needed */
   }
-.specialties .card img{
+  .card {
+    background-color: #333;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 300px;
+    text-align: left;
+    color: white;
+    height: 350px;
+}
+ .card img{
     width: 100%;
     height: 70%;
 }
-.specialties .card .content{
+ .card .content{
     padding: 20px;
     padding-top: 10px;
 }
-.specialties .card .content h3{
+ .card .content h3{
     margin: 0;
     font-size: 1.5em;
 }
-.specialties .card .content p{
+ .card .content p{
     margin: 10px 0;
     font-size: 1em;
     color: #b3b3b3;
@@ -291,8 +292,88 @@ nav {
     background-color: #e74c3c;
     margin: 10px auto 30px;
 }
+.about{
+    background-color: black;
+    padding: 50px;
+    height: auto;
+    padding-bottom: 100px;
+}
+
+.about h2{
+    font-size: 2.5em;
+    margin: 20px;
+    text-align: center;
+    color: white;
+}
+.about .underline{
+    width: 50px;
+    height: 3px;
+    background-color: #e74c3c;
+    margin: 10px auto 30px;
+}
+.about .about-content{
+    width: 100%;
+    display: flex;
+    height: 450px;
+}
+.about .about-content .img-content{
+    width: 50%;
+    display: flex;
+}
+.img1{
+    height: 350px;
+    width: 350px;
+    z-index: 1;
+    background-size: cover;
+}
+.img2{
+    z-index: 5;
+    background-size: cover;
+    height: 350px;
+    width: 350px;
+    margin-left: -50px;
+    margin-top: 100px;
+}
+.about-text{
+    width: 50%;
+    display: block;
+    align-content:center;
+}
+.about-text h4{
+    color: white;
+    font-size: 30px;
+}
 
 
+
+
+
+.card-details {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    z-index: 10;
+  }
+  
+  .card-details img {
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
 
 
 
@@ -317,6 +398,10 @@ nav {
     font-weight: 400;
     font-style: normal;
   }
+  .logo h1{
+    font-size: 23px;
+    padding-left: 8px;
+  }
     .nav-links {
         position: absolute;
         background-color: white;
@@ -339,6 +424,7 @@ nav {
         padding: 0px;
         margin: 0px;
         height: auto;
+        z-index: 9;
     }
     .item-list{
         padding: 0;
@@ -353,9 +439,23 @@ nav {
         font-family: "Poppins", serif;
         text-decoration: none;
     }
+    .nav-list .item-list li a img{
+        height: 30px;
+        width: 30px;
+    }
 
     .burger {
         display: block;
+    }
+    .burger img{
+        margin: 0;
+        padding-right: 8px;
+    }
+    .close{
+        height: 30px;
+        width: 30px;
+        margin: 0;
+        padding-right: 8px;
     }
     #home-page{
         display: flex;
@@ -370,15 +470,17 @@ nav {
         padding-bottom: 50px;
         margin-top: 30px;
         border: none;
-        margin-left: 20px;
+        padding-left: 0;
+        margin-left: 18px;
     }
     .text-title h1{
-        font-size: 40px;
+        font-size: 30px;
         font-family: "Poppins", serif;
         margin-right: 17px;
     }
     .text-title p{
-        font-size: 25px;
+        font-size: 20px;
+        padding-right: 15px;
     }
     .home-img{
         width: 100%;
@@ -395,7 +497,7 @@ nav {
     #home-btn{
         align-items: center;
         font-size: 20px;
-        margin-left: 50px;
+        margin: 0;
     }
     .services{
         margin: 40px;
@@ -444,21 +546,25 @@ nav {
         overflow-x: auto;
         white-space: nowrap;
     }
+    .specialties .cards .container .item{
+        width: 250px;
+    }
     .specialties .card{
-        max-width: 250px;
-        height: 300px;
+        width: 180px;
+        height: 200px;
         display: inline-block;
     }
     .specialties .card .content{
-        padding: 10px;
+        padding: 0;
+        padding-left: 8px;
     }
     .specialties .card .content h3{
         margin: 0;
-        font-size: 1.2em;
+        font-size: 1em;
     }
     .specialties .card .content p{
         margin: 0;
-        font-size: 1em;
+        font-size: 0.7em;
         color: #b3b3b3;
     }
     .specialties .card .content .price{
@@ -478,5 +584,52 @@ nav {
         display: flex;
         flex-direction: column;
     }
+    .about{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        height: fit-content;
+    }
+    .about .underline{
+        margin-bottom: 10px;
+    }
+    .about-content{
+        padding: 0;
+        overflow: hidden;
+        margin: 0;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .about-content .img-content{
+        display: flex;
+        width: 100%;
+    }
+    .img1{
+        z-index: 0;
+        margin: 0;
+        padding: 0;
+        background-size: cover;
+        width: 200px;
+        height: 200px;
+    }
+    .img2{
+        z-index: 0;
+        margin: 0;
+        height: 200px;
+        padding: 0;
+        width: 300px;
+        background-size: cover;
+    }
 
+    .about-text{
+        width: 100%;
+        padding-right: 0;
+        margin-right: 15px;
+    }
+    .about-text h4{
+        font-size: 15px;
+        margin: 0;
+        padding: 0;
+        width: 80%;
+    }
 }
