--- a/Components/index.html
+++ b/Components/index.html
@@ -27,7 +27,7 @@
         <div class="nav-list">
             <ul class="item-list">
                 <li><a href="#"><img src="../icon/login.png" alt=""></a></li>
-                <li><a href="#"><img src="../icon/cart.png" alt=""></a></li>
+                <li><a href="cart.html"><img src="../icon/cart.png" alt=""></a></li>
                 <div class="burger">
                     <img src="../icon/menu.png" alt="bar" class="open">
                 </div>
@@ -161,14 +161,14 @@
              </div>
              </div>
             </div>
-            <center><a class="view-menu" href="#"> View Full Menu </a></center>
+            <center><a class="view-menu" href="menu.html"> View Full Menu </a></center>
             <div id="cardDetails" class="card-details">
                 <span class="close-button" onclick="closeDetails()"><img src="../icon/close.png" style="height: 35px;width: 35px;"></span>
                 <img id="productImage" src="" alt="">
                 <h2 id="productName"></h2>
                 <p id="price"></p>
-                <button>Add to Cart</button>
-              </div>
+                <button onclick="addToCart()">Add to Cart</button>
+            </div>
         </section>
 
 
@@ -190,7 +190,9 @@
         
     </main>
 
+    <script src="../Javascript/menu.js"></script>
     <script src="../Javascript/index.js"></script>
+    <script src="../Javascript/cart.js"></script>
 
 </body>
 </html>
