--- a/Css/index.css
+++ b/Css/index.css
@@ -359,12 +359,13 @@ nav {
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 400px;
+    height: 400px;
     z-index: 10;
   }
   
   .card-details img {
-    max-width: 200px;
-    height: auto;
+    width: 100%;
+    height: 70%;
     margin-bottom: 10px;
   }
   
@@ -373,6 +374,12 @@ nav {
     top: 10px;
     right: 10px;
     cursor: pointer;
+  }
+  .card-details #productName{
+    margin: 0;
+  }
+  .card-details #productName #price{
+    margin: 0;
   }
 
 
