--- a/Css/menu.css
+++ b/Css/menu.css
@@ -64,6 +64,14 @@ header .underline{
     height: 40px;
     overflow: hidden;
 }
+.menu-container {
+    width: 100%;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;align-items: center;
+    justify-content: space-around;
+  }
 input{
     width: 80%;
     height: 80%;
@@ -81,7 +89,7 @@ input{
 .menu-item {
     border: 2px solid black;
     margin-bottom: 1rem;
-    width: 250px;
+    width: 260px;
     border-radius: 5px;
 }
 
@@ -92,6 +100,24 @@ input{
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    width: 80%;
+    margin-left: 45px;
+}
+.menu-card{
+    height: 100%;
+    background-color: #333;
+}
+.menu-card h3{
+    color: white;
+    font-size: 1.5em;
+    text-align: left;
+    padding-left: 10px;
+}
+.menu-card .price{
+    color: red;
+    font-size: 1.2em;
+    text-align: left;
+    padding-left: 10px;
 }
 img{
     height: 250px;
@@ -120,7 +146,7 @@ img{
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
-    scrollbar-width: 2px;
+    scrollbar-width: none;
     }
     .menubar {
         display: inline-block;
